[package]
authors = ["Oliver Cooper <oliver.cooper@me.com>"]
edition = "2021"
name = "mqtt-beacon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = {version = "0.9", features = ["serde"]}
env_logger = "0.9.0"
log = "0.4"
mqtt-garage = {git = "https://github.com/oeed/mqtt-garage"}
rumqttc = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
tokio = "1.4"
toml = "0.5.8"

# value-bag = { version = "=1.0.0-alpha.8" }

[target.'cfg(target_os = "linux")'.dependencies]
rumble = {git = "https://github.com/mwylde/rumble"}
